crates/kirin-derive-core-2/src/kirin/field/snapshots/kirin_derive_core_2__kirin__field__struct_impl__tests__struct_iterator_impl_tokens.snap
---
source: crates/kirin-derive-core-2/src/kirin/field/struct_impl.rs
expression: "prettyplease::unparse(&t)"
---
#[automatically_derived]
impl<'a, T: Bound> HasArguments<'a> for MyStruct<T> {
    type Iter = MyStructArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        let Self { values, count, marker } = self;
        MyStructArgumentsIter {
            inner: values.iter().chain(std::iter::once(count)),
        }
    }
}
#[automatically_derived]
pub struct MyStructArgumentsIter<'a> {
    inner: std::iter::Chain<
        std::slice::Iter<'a, SSAValue>,
        std::iter::Once<&'a SSAValue>,
    >,
}
#[automatically_derived]
impl<'a> Iterator for MyStructArgumentsIter<'a> {
    type Item = &'a SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
